--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
         </div>
       </div>
       <div id="output-content">></div>
-    </div>
+    
+<h3>Remove all E`s</h3>
+<div></div>
+
+
+
+      <button type="button" onclick="removeEs()">Remove Es</button>
+     
+
 
     <script type="module" src="tests/run.js"></script>
   </body>
