--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div class="button-container">
         <!-- TODO: New buttons go here. -->
         <button type="button" onclick="$(exercise01)">Exercise 1</button>
+        <button type="button" onclick="$(exercise02)">Exercise 2</button>
+        <button type="button" onclick="$(exercise03)">Exercise 3</button>
+        <button type="button" onclick="$(exercise04)">Exercise 4</button>
       </div>
     </div>
 
