--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button type="button" onclick="$(exercise02)">Exercise 2</button>
         <button type="button" onclick="$(exercise03)">Exercise 3</button>
         <button type="button" onclick="$(exercise04)">Exercise 4</button>
+        <button type="button" onclick="$(exercise05)">Exercise 5</button>
       </div>
     </div>
 
