--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button type="button" onclick="$(exercise03)">Exercise 3</button>
         <button type="button" onclick="$(exercise04)">Exercise 4</button>
         <button type="button" onclick="$(exercise05)">Exercise 5</button>
+        <button type="button" onclick="$(exercise06)">Exercise 6</button>
       </div>
     </div>
 
