--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <button type="button" onclick="$(exercise04)">Exercise 4</button>
         <button type="button" onclick="$(exercise05)">Exercise 5</button>
         <button type="button" onclick="$(exercise06)">Exercise 6</button>
+        <button type="button" onclick="$(exercise07)">Exercise 7</button>
+        <button type="button" onclick="$(exercise08)">Exercise 8</button>
       </div>
     </div>
 
